Add main structure

--- a/index.html
+++ b/index.html
@@ -24,16 +24,26 @@
 
 <body>
 
-  You’ve used 815 GB of your storage
+  <div class="container">
+    <div class="first-cild">
 
-  185 GB Left
+    </div>
+    <div class="second-child">
+      You’ve used 815 GB of your storage
 
-  0 GB
-  1000 GB
+      185 GB Left
+
+      0 GB
+      1000 GB
+    </div>
+
+  </div>
+
+
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://samialariki.github.io/My-Personal-Website/">Sami Alariki</a>.
   </div>
 </body>
 
